2010-06-04  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] failed at http://philip.html5.org/tests/canvas/suite/tests/2d.path.arc.angle.3.html
        https://bugs.webkit.org/show_bug.cgi?id=38537

        Remove canvas/philip/tests/2d.path.arcTo.2d.path.arc.angle.3.html and
        canvas/philip/tests/2d.path.arcTo.2d.path.arc.angle.5.html from Skipped.

        * platform/qt/Skipped:
2010-06-04  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] failed at http://philip.html5.org/tests/canvas/suite/tests/2d.path.arc.angle.3.html
        https://bugs.webkit.org/show_bug.cgi?id=38537

        For path.arc function handle span > 2PI

        * platform/graphics/qt/PathQt.cpp:
        (WebCore::Path::addArc):

Canonical link: https://commits.webkit.org/51687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60663 268f45cc-cd09-0410-ab3c-d52691b4dbfc